force-app/main/default/objects/clcommon__Party__c/fields/Is_Trustee_a_Ben_Mem_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Is_Trustee_a_Ben_Mem_Warning_Check__c</fullName>
    <formula>IF(OR( Legal_Entity_Type__c == &apos;Trust&apos;, Legal_Entity_Type__c == &apos;Family Trust&apos;, Legal_Entity_Type__c == &apos;SMSF&apos;),IF(ISPICKVAL(Trustee_Type__c, &apos;Individual&apos;), OR(ISPICKVAL(Is_Trustee_a_Beneficiary_Member__c, &apos;No&apos;), ISPICKVAL(Is_Trustee_a_Beneficiary_Member__c, &apos;&apos;)), FALSE), FALSE)</formula>
    <label>Is Trustee a Ben/Mem Warning Check</label>
    <type>Checkbox</type>
</CustomField>