force-app/main/default/objects/clcommon__Party__c/fields/LAS_Utility_Show_in_Capacity_Section__c.field-meta.xml
<CustomField>
    <fullName>LAS_Utility_Show_in_Capacity_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LAS Utility Show in Capacity Section</label>
    <type>Checkbox</type>
</CustomField>