force-app/main/default/objects/clcommon__Party__c/fields/Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Type__c</fullName>
    <formula>clcommon__Account__r.clcommon__Legal_Entity_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Type</label>
    <type>Text</type>
</CustomField>