force-app/main/default/objects/clcommon__Party__c/fields/Linked_Application_Search__c.field-meta.xml
<CustomField>
    <fullName>Linked_Application_Search__c</fullName>
    <label>Linked Application Search</label>
    <type>TextArea</type>
</CustomField>