force-app/main/default/objects/clcommon__Party__c/fields/Living_Expense_Explanation_Received__c.field-meta.xml
<CustomField>
    <fullName>Living_Expense_Explanation_Received__c</fullName>
    <label>Living Expense Explanation Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>