force-app/main/default/objects/clcommon__Party__c/fields/Living_Expense_Section_Render__c.field-meta.xml
<CustomField>
    <fullName>Living_Expense_Section_Render__c</fullName>
    <formula>OR(AND(OR(ISPICKVAL(clcommon__Contact__r.clcommon__Marital_Status__c, &apos;De Facto&apos;), ISPICKVAL(clcommon__Contact__r.clcommon__Marital_Status__c, &apos;Married&apos;)), ISPICKVAL(Is_this_a_joint_applicant__c, &apos;No&apos;)), OR(ISPICKVAL(clcommon__Contact__r.clcommon__Marital_Status__c, &apos;Divorced&apos;), ISPICKVAL(clcommon__Contact__r.clcommon__Marital_Status__c, &apos;Separated&apos;), ISPICKVAL(clcommon__Contact__r.clcommon__Marital_Status__c, &apos;Single&apos;), ISPICKVAL(clcommon__Contact__r.clcommon__Marital_Status__c, &apos;Widowed&apos;)),
 Party_Type_Name__c == &apos;Household&apos;)</formula>
    <label>Living Expense Section Render</label>
    <type>Checkbox</type>
</CustomField>