force-app/main/default/objects/clcommon__Party__c/fields/Living_Expense_Suitale_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Living_Expense_Suitale_Commentary__c</fullName>
    <label>Living Expense Suitale Commentary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>