force-app/main/default/objects/clcommon__Party__c/fields/Living_Expense_Used_for_Servicing_Purpos__c.field-meta.xml
<CustomField>
    <fullName>Living_Expense_Used_for_Servicing_Purpos__c</fullName>
    <label>Living Expense Used for Servicing Purpos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>