force-app/main/default/objects/clcommon__Party__c/fields/Loan_Assesment_Commentary_Asts_Liablts__c.field-meta.xml
<CustomField>
    <fullName>Loan_Assesment_Commentary_Asts_Liablts__c</fullName>
    <label>Loan Assesment Commentary Asts &amp; Liablts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>