force-app/main/default/objects/clcommon__Party__c/fields/Loan_Assesment_Commentary_Emp_Income_D__c.field-meta.xml
<CustomField>
    <fullName>Loan_Assesment_Commentary_Emp_Income_D__c</fullName>
    <label>Loan Assesment Commentary Emp &amp; Income D</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>