force-app/main/default/objects/clcommon__Party__c/fields/Loan_Assesment_Commentary_Income__c.field-meta.xml
<CustomField>
    <fullName>Loan_Assesment_Commentary_Income__c</fullName>
    <label>Loan Assesment Commentary Income</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>