force-app/main/default/objects/clcommon__Party__c/fields/Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance__c</fullName>
    <formula>genesis__Application__r.CL_Contract__r.loan__Loan_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>