force-app/main/default/objects/clcommon__Party__c/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <formula>IF(genesis__Application__r.CL_Contract__c != null, IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c,&apos;Closed - Refinanced&apos;),&apos;Closed - Refinanced&apos;, IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c,&apos;Active - Good Standing&apos;),&apos;Active - Good Standing&apos;, IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c,&apos;Active - Bad Standing&apos;),&apos;Active - Bad Standing&apos;,IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c, &apos;Active - Matured&apos;), &apos;Active - Matured&apos;,IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c,&apos;Approved&apos;),&apos;Approved&apos;,IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c, &apos;Canceled&apos;), &apos;Canceled&apos;, IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c, &apos;Closed - Obligations met&apos;), &apos;Closed - Obligations met&apos;, IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c, &apos;Closed - Premature&apos;), &apos;Closed - Premature&apos;, IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c, &apos;Closed- Written Off&apos;), &apos;Closed- Written Off&apos;, IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c, &apos;Invalid&apos;), &apos;Invalid&apos;, IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c, &apos;Partial Application&apos;), &apos;Partial Application&apos;,IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c, &apos;Pending Approval&apos;), &apos;Pending Approval&apos;, IF(ISPICKVAL(genesis__Application__r.CL_Contract__r.loan__Loan_Status__c, &apos;Active - Marked for Closure&apos;), &apos;Active - Marked for Closure&apos;, &apos;Premature Closure Initiated&apos;))))))))))))), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Status</label>
    <type>Text</type>
</CustomField>