force-app/main/default/objects/clcommon__Party__c/fields/MainBusinessActivity__c.field-meta.xml
<CustomField>
    <fullName>MainBusinessActivity__c</fullName>
    <label>MainBusinessActivity</label>
    <type>TextArea</type>
</CustomField>