force-app/main/default/objects/clcommon__Party__c/fields/Name_for_Purpose_of_GSA_Contract__c.field-meta.xml
<CustomField>
    <fullName>Name_for_Purpose_of_GSA_Contract__c</fullName>
    <label>Name for Purpose of GSA/Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>