force-app/main/default/objects/clcommon__Party__c/fields/NewExisting__c.field-meta.xml
<CustomField>
    <fullName>NewExisting__c</fullName>
    <label>NewExisting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>