force-app/main/default/objects/clcommon__Party__c/fields/No_com_enq_in_60m__c.field-meta.xml
<CustomField>
    <fullName>No_com_enq_in_60m__c</fullName>
    <label>No com enq in 60m</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>