force-app/main/default/objects/clcommon__Party__c/fields/No_con_mort_deflt_SCI_60_84m__c.field-meta.xml
<CustomField>
    <fullName>No_con_mort_deflt_SCI_60_84m__c</fullName>
    <label>No con mort deflt/SCI 60/84m</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>