force-app/main/default/objects/clcommon__Party__c/fields/No_of_Credit_Enquiries_in_more_than_12_M__c.field-meta.xml
<CustomField>
    <fullName>No_of_Credit_Enquiries_in_more_than_12_M__c</fullName>
    <label>No of Credit Enquiries in more than 12 M</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>