force-app/main/default/objects/clcommon__Party__c/fields/Number_of_bankrupt_on_file_in_last_84m__c.field-meta.xml
<CustomField>
    <fullName>Number_of_bankrupt_on_file_in_last_84m__c</fullName>
    <label>Number of bankrupt on file in last 84m</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>