force-app/main/default/objects/clcommon__Party__c/fields/Number_Of_Credit_Events__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Credit_Events__c</fullName>
    <inlineHelpText>A detailed understanding of the event must be obtained from the borrower and this must match the timing and understanding as outlined by the credit report. [21.3.1]</inlineHelpText>
    <label>Number Of Credit Events</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>