force-app/main/default/objects/clcommon__Party__c/fields/Number_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Directors__c</fullName>
    <label>Number of Directors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>