force-app/main/default/objects/clcommon__Party__c/fields/Number_of_Discharged_Insolvencies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Discharged_Insolvencies__c</fullName>
    <label>Number of Discharged Insolvencies</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>