force-app/main/default/objects/clcommon__Party__c/fields/Number_of_Disqualified_Directorships__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Disqualified_Directorships__c</fullName>
    <label>Number of Disqualified Directorships</label>
    <summaryFilterItems>
        <field>Current_Directorship__c.Directorship_Type__c</field>
        <operation>equals</operation>
        <value>Disqualified</value>
    </summaryFilterItems>
    <summaryForeignKey>Current_Directorship__c.Party__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>