force-app/main/default/objects/clcommon__Party__c/fields/Number_of_insolvencies_on_file__c.field-meta.xml
<CustomField>
    <fullName>Number_of_insolvencies_on_file__c</fullName>
    <label>Number of insolvencies on file</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>