force-app/main/default/objects/clcommon__Party__c/fields/Number_of_Secretaries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Secretaries__c</fullName>
    <label>Number of Secretaries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>