force-app/main/default/objects/clcommon__Party__c/fields/Number_Of_Trustees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Trustees__c</fullName>
    <label>Number Of Trustees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>