force-app/main/default/objects/clcommon__Party__c/fields/Number_Payment_Defaults_in_last_12_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_Payment_Defaults_in_last_12_Month__c</fullName>
    <label>Number Payment Defaults in last 12 Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>