force-app/main/default/objects/clcommon__Party__c/fields/Number_Payment_Defaults_in_more_than_12__c.field-meta.xml
<CustomField>
    <fullName>Number_Payment_Defaults_in_more_than_12__c</fullName>
    <label>Number Payment Defaults in more than 12</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>