force-app/main/default/objects/clcommon__Party__c/fields/NX7561_df_sts_na_60_84m__c.field-meta.xml
<CustomField>
    <fullName>NX7561_df_sts_na_60_84m__c</fullName>
    <label>NX7561_df_sts_na_60_84m</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>