force-app/main/default/objects/clcommon__Party__c/fields/NY7520_df_tcut_60_84m__c.field-meta.xml
<CustomField>
    <fullName>NY7520_df_tcut_60_84m__c</fullName>
    <label>NY7520_df_tcut_60_84m</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>