force-app/main/default/objects/clcommon__Party__c/fields/NY7568_df_sts_unpd_60_84m__c.field-meta.xml
<CustomField>
    <fullName>NY7568_df_sts_unpd_60_84m__c</fullName>
    <label>NY7568_df_sts_unpd_60_84m</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>