force-app/main/default/objects/clcommon__Party__c/fields/Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>Organization_Status__c</fullName>
    <label>Organization Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>