force-app/main/default/objects/clcommon__Party__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <label>Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>