force-app/main/default/objects/clcommon__Party__c/fields/Party_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Type_Name__c</fullName>
    <formula>clcommon__Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Type Name</label>
    <type>Text</type>
</CustomField>