force-app/main/default/objects/clcommon__Party__c/fields/Payment_Defaults__c.field-meta.xml
<CustomField>
    <fullName>Payment_Defaults__c</fullName>
    <label>Payment Defaults</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>