force-app/main/default/objects/clcommon__Party__c/fields/Percentage_Of_Commission__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Of_Commission__c</fullName>
    <formula>IF(clcommon__Type__r.Name == &apos;Broker&apos;, clcommon__Account__r.Percentage_Of_Commission__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Of Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>