force-app/main/default/objects/clcommon__Party__c/fields/Petitions__c.field-meta.xml
<CustomField>
    <fullName>Petitions__c</fullName>
    <label>Petitions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>