force-app/main/default/objects/clcommon__Party__c/fields/Possible_Matches__c.field-meta.xml
<CustomField>
    <fullName>Possible_Matches__c</fullName>
    <label>Possible Matches</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>