force-app/main/default/objects/clcommon__Party__c/fields/Possibly_Matched_data__c.field-meta.xml
<CustomField>
    <fullName>Possibly_Matched_data__c</fullName>
    <label>Possibly Matched data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>