force-app/main/default/objects/clcommon__Party__c/fields/Post_Settlement_Address__c.field-meta.xml
<CustomField>
    <fullName>Post_Settlement_Address__c</fullName>
    <label>Post-Settlement Address</label>
    <type>TextArea</type>
</CustomField>