force-app/main/default/objects/clcommon__Party__c/fields/Pre_Settlement_Address__c.field-meta.xml
<CustomField>
    <fullName>Pre_Settlement_Address__c</fullName>
    <label>Pre-Settlement Address</label>
    <type>TextArea</type>
</CustomField>