force-app/main/default/objects/clcommon__Party__c/fields/Previous_cond_exp_received_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Previous_cond_exp_received_Warning_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous cond exp received Warning Check</label>
    <type>Checkbox</type>
</CustomField>