force-app/main/default/objects/clcommon__Party__c/fields/Previous_Conduct_Commentary_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Previous_Conduct_Commentary_Rule_Check__c</fullName>
    <formula>IF(ISPICKVAL(Previous_conduct_explanation_received__c,&apos;Yes&apos;),&apos;Render&apos;,&apos;Not Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Conduct Commentary Rule Check</label>
    <type>Text</type>
</CustomField>