force-app/main/default/objects/clcommon__Party__c/fields/Previous_conduct_issues_identified__c.field-meta.xml
<CustomField>
    <fullName>Previous_conduct_issues_identified__c</fullName>
    <label>Previous conduct issues identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>