force-app/main/default/objects/clcommon__Party__c/fields/Previously_Bankrupt_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Previously_Bankrupt_Discharge_Date__c</fullName>
    <inlineHelpText>Previous bankrupts will be considered, however, undischarged bankrupts and applicants with multiple bankruptcies will not. [21.3.2]</inlineHelpText>
    <label>Previously Bankrupt Discharge Date</label>
    <type>Date</type>
</CustomField>