force-app/main/default/objects/clcommon__Party__c/fields/Previously_Bankrupt_Discharged__c.field-meta.xml
<CustomField>
    <fullName>Previously_Bankrupt_Discharged__c</fullName>
    <inlineHelpText>Previous bankrupts will be considered, however, undischarged bankrupts and applicants with multiple bankruptcies will not. [21.3.2]</inlineHelpText>
    <label>Previously Bankrupt Discharged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>