force-app/main/default/objects/clcommon__Party__c/fields/Primary_Residence_Prop_Cost_Warning_Chck__c.field-meta.xml
<CustomField>
    <fullName>Primary_Residence_Prop_Cost_Warning_Chck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Residence Prop Cost Warning Chck</label>
    <type>Checkbox</type>
</CustomField>