force-app/main/default/objects/clcommon__Party__c/fields/Property_Trust_ACN__c.field-meta.xml
<CustomField>
    <fullName>Property_Trust_ACN__c</fullName>
    <label>Property Trust ACN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>