force-app/main/default/objects/clcommon__Party__c/fields/Registered_Office__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office__c</fullName>
    <label>Registered Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>