force-app/main/default/objects/clcommon__Party__c/fields/Rent_Board_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Rent_Board_Warning_Check__c</fullName>
    <formula>IF(AND(ISPICKVAL(clcommon__Contact__r.Housing_Status__c, &apos;Renting&apos;), ISPICKVAL(genesis__Application__r.Primary_loan_purpose_list__c, &apos;Investment&apos;), Living_Expense_Section_Render__c == TRUE), OR(Rent_Board_Monthly_Amount__c == 0, Rent_Board_Monthly_Amount__c == null), FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent/Board Warning Check</label>
    <type>Checkbox</type>
</CustomField>