force-app/main/default/objects/clcommon__Party__c/fields/Rental_Income_Verfication_Source__c.field-meta.xml
<CustomField>
    <fullName>Rental_Income_Verfication_Source__c</fullName>
    <label>Rental Income Verfication Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valuation</fullName>
            </value>
            <value>
                <fullName>Rental Statements</fullName>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Agents Appraisal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>