force-app/main/default/objects/clcommon__Party__c/fields/Rental_Income_Verified__c.field-meta.xml
<CustomField>
    <fullName>Rental_Income_Verified__c</fullName>
    <label>Rental Income Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>