force-app/main/default/objects/clcommon__Party__c/fields/Rental_Income_Verified_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Rental_Income_Verified_Warning_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Income Verified Warning Check</label>
    <type>Checkbox</type>
</CustomField>