force-app/main/default/objects/clcommon__Party__c/fields/Report_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Created_Date__c</fullName>
    <label>Report Created Date</label>
    <type>Date</type>
</CustomField>