force-app/main/default/objects/clcommon__Party__c/fields/Report_for__c.field-meta.xml
<CustomField>
    <fullName>Report_for__c</fullName>
    <label>Report for</label>
    <type>TextArea</type>
</CustomField>