force-app/main/default/objects/clcommon__Party__c/fields/Screened_Date__c.field-meta.xml
<CustomField>
    <fullName>Screened_Date__c</fullName>
    <formula>clcommon__Account__r.Screened_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Screened Date</label>
    <type>Date</type>
</CustomField>