force-app/main/default/objects/clcommon__Party__c/fields/Secretary_Check__c.field-meta.xml
<CustomField>
    <fullName>Secretary_Check__c</fullName>
    <formula>IF( Legal_Entity_Type__c == &apos;Company&apos;,( IF((Party_Type_Name__c==&apos;Borrower&apos;  ||  Party_Type_Name__c ==&apos;Guarantor&apos; ||  Party_Type_Name__c ==&apos;Co-applicant&apos;),(IF( Number_of_Secretaries__c  &lt;= 0, true, false) ) , false)), false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secretary Check</label>
    <type>Checkbox</type>
</CustomField>