force-app/main/default/objects/clcommon__Party__c/fields/Settlement_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Fee_Amount__c</fullName>
    <formula>IF( ISNULL( Settlement_Fee__c ) ||  ISBLANK( Settlement_Fee__c )  ,0,  genesis__Application__r.genesis__Loan_Amount__c  *  Settlement_Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>