force-app/main/default/objects/clcommon__Party__c/fields/Settlement_Fee_Check__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Fee_Check__c</fullName>
    <formula>IF(  clcommon__Type__r.Name &lt;&gt; &apos;Broker&apos;, True, IF( Settlement_Fee__c  =  genesis__Application__r.Settlement_Fee_Percentage__c ,True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Fee Check</label>
    <type>Checkbox</type>
</CustomField>