force-app/main/default/objects/clcommon__Party__c/fields/Shareholder__c.field-meta.xml
<CustomField>
    <fullName>Shareholder__c</fullName>
    <label>Shareholder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>