force-app/main/default/objects/clcommon__Party__c/fields/SMSF_Status__c.field-meta.xml
<CustomField>
    <fullName>SMSF_Status__c</fullName>
    <label>SMSF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Complying</fullName>
            </value>
            <value>
                <fullName>Non-complying</fullName>
            </value>
            <value>
                <fullName>This ABN has been cancelled and the fund may no longer be operating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>