force-app/main/default/objects/clcommon__Party__c/fields/Solictors_Document_Utility_Phone__c.field-meta.xml
<CustomField>
    <fullName>Solictors_Document_Utility_Phone__c</fullName>
    <label>Solictors Document Utility Phone</label>
    <type>Phone</type>
</CustomField>