force-app/main/default/objects/clcommon__Party__c/fields/To_be_refinanced_Condition_Check__c.field-meta.xml
<CustomField>
    <fullName>To_be_refinanced_Condition_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be refinanced Condition Check</label>
    <type>Checkbox</type>
</CustomField>