force-app/main/default/objects/clcommon__Party__c/fields/Total_PAYG_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_PAYG_Income__c</fullName>
    <label>Total PAYG Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>