force-app/main/default/objects/clcommon__Party__c/fields/Total_Payment_Defaults__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Defaults__c</fullName>
    <label>Total Payment Defaults</label>
    <summaryForeignKey>Credit_Account__c.Party__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>